# mapreduce

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
app/: main.py  models.py  utils.py
app/api/: routers.py
app/api/admin/: chunk.py  job.py  llm_ops.py  retrieve.py  sync_ops.py
app/core/: chunker.py  kafka.py  llm_ops.py  logger.py  openai_adapter.py  parser.py  rerank.py  vdb.py
app/middlewares/: middlewares.py  request_ctx.py
app/middlewares/exception/: common.py
app/schemas/: billing.py  chunk.py  embed.py  facade.py  file.py  kafka.py  public.py  vector.py
app/schemas/request/: base.py  job.py  llm_ops.py  query.py  sync_ops.py
app/schemas/response/: base.py  chunk.py  llm_ops.py  query.py  sync_ops.py
app/services/: chunk.py  completion.py  embed.py  job.py  retrieval.py  vdb.py
app/services/consumers/: dataset_create.py  embed.py
app/settings/: config.py  settings.yml
manifests/: deploy.yaml  env-cm.yaml  svc.yaml
