[tool.aerich]
tortoise_orm = "config.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."

[tool.poetry]
name = "sentia_mapreduce"
version = "0.9.8"
description = "My Awesome Project!"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
aiokafka = "^0.10.0"
asgi-lifespan = "^2.1.0"
cos-python-sdk-v5 = "^1.9.30"
elasticsearch7 = "^7.17.9"
fastapi = "^0.111.0"
fastapi-pagination = "^0.12.25"
httpx = "^0.27.0"
ipython = "^8.25.0"
langchain = "^0.2.5"
langchain-community = "^0.2.5"
markdown-it-py = "^3.0.0"
openai = "^1.35.3"
openpyxl = "^3.1.4"
orjson = "^3.10.5"
pycryptodome = "^3.20.0"
pycryptodomex = "^3.20.0"
pydantic = "2.8.2"
pydantic-settings = "^2.3.3"
pytest = "^8.2.2"
python-dotenv = "^1.0.1"
requests = "^2.32.3"
tcvectordb = "^1.3.2"
tenacity = "^8.4.1"
tiktoken = "^0.7.0"
unstructured = "^0.14.7"
uvicorn = "0.21.1"
cohere = "^5.2.4"
pyyaml = "^6.0.1"
python-pptx = "^0.6.23"
markdown = "^3.6"
singleton-decorator = "^1.0.0"
python-docx = "^1.1.2"
pandas = "^2.2.2"
llama-parse = "0.4.7"
pdfplumber = "^0.11.1"
baidu-aip = "^4.16.13"
loguru = "^0.7.2"
aiofiles = "^24.1.0"
aiostream = "^0.6.1"
pymysql = "^1.1.1"
dynaconf = "^3.2.5"
pypandoc = "^1.13"
faust-cchardet = "^2.1.19"
markdownify = "^0.13.1"
mammoth = "^1.8.0"
pypdf2 = "^3.0.1"
pymupdf = "^1.24.10"
certifi = "2024.7.4"
addict = "^2.4.0"
attrs = "^24.2.0"
cattrs = "^24.1.0"
xlrd = "^2.0.1"
html5lib = "^1.1"
aspose-words = "^24.7.0"
llama-index-core = "0.10.55"
pinecone = "^7.2.0"
grpcio = "^1.73.0"
googleapis-common-protos = "^1.70.0"
asyncio = "^3.4.3"
aiohttp = "^3.12.13"
aiohappyeyeballs = "^2.6.1"
aiosignal = "^1.3.2"
async-timeout = "^5.0.1"
frozenlist = "^1.7.0"
multidict = "^6.5.1"
propcache = "^0.3.2"
yarl = "^1.20.1"
speedups = "^1.4.0"
aiohttp-retry = "^2.9.1"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
